katars/tests/snaps/snapshots/snap_errors__mixed_array.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let a = [1, \\\"two\\\", 3]\")"
---
Error: type mismatch: expected Int, got Str
   ╭─[<test>:1:9]
   │
 1 │ let a = [1, "two", 3]
   │         ──────┬──────  
   │               ╰──────── type mismatch: expected Int, got Str
───╯
